improved current_url in projects#index view to support scopes when a user changes page. improved readme

--- a/app/views/projects/_project_search_scope.html.erb
+++ b/app/views/projects/_project_search_scope.html.erb
@@ -17,6 +17,7 @@
 		<% end %> 
 		
 		<% if params[:scope] %>
+			<%= hidden_field_tag "scope", params[:scope] %>
 			 <i><%= link_to "Remove scope", @current_url_without_scope, style: "color:#C96D6D" %> </i>
 		<% end %> 
 		
