--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -424,7 +424,7 @@ label {
 }
 
 
-/* Codes CSS */
+																				/* Codes CSS */
 
 .code-table {
   /*margin-left: auto;
@@ -441,5 +441,21 @@ label {
   td:first {
     padding-left:15px;
   }
+}
+																		/* EXPORTER TABLE */
+																		
+#data_preview {
+	border: 1px solid #777;
+	
+	th {
+		border: 1px solid #777;
+		border-bottom: 1px solid #555;
+		padding: 5px;
+	}
+	
+	td {
+		padding: 5px;
+		border: 1px solid #aaa;
+	}
 }
 
