--- a/app/views/static_pages/aggregate_exporter.html.erb
+++ b/app/views/static_pages/aggregate_exporter.html.erb
@@ -153,7 +153,8 @@ function build_api_params () {
 }
 
 function load_data_preview() {
-
+	$("#data_preview td").text("--")
+	$("#data_preview_note").html("... Loading your preview ... ")
 	api_call = decodeURIComponent(build_api_params())
 	$.post('/aggregates/projects?'+api_call, function(json) {
 	//console.log(data)
