--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -52,7 +52,7 @@
 			<%= flow_class_form.association :oda_like_1 %>
 			<%= flow_class_form.association :oda_like_2 %>
 			<%= flow_class_form.association :oda_like_master %>
-			    <span style="color:#999">Will be autoarbitrated on Save if both flow_classes match</span>
+			    <span style="color:#999">Will be autoarbitrated on Save if there is no Master and both flow_classes match</span>
 	<% end %>
 
 	
