Fixed header sizing

--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -416,7 +416,7 @@ function try_drawing_overlay() {
 	      	.style("font-size", 50)	      	 
 			    .style("font-family", "Georgia")		 
 			    .style("font-weight", "bold"    ) 
-			    .html("<div id = 'country_header_body' style = 'font-size:40px; height:"+h/6+"; width:"+w/2.1+"'><span>"+activeName+"</span></div>")
+			    .html("<div id = 'country_header_body' style = 'line-height:40px; font-size:40px; height:"+h/6+"; width:"+w/2.1+"'><span>"+activeName+"</span></div>")
 					.transition()
 						.style("opacity",1)
 						.duration(500)
