Fixed console.log noise

--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -156,6 +156,7 @@ var ocean_outline = map.append("svg:path")
 
 other_features.forEach(function(f) {
 	f.properties.id = "non_african"
+	collection.features.unshift(f)
 	}
 	)
 
