--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -34,6 +34,7 @@
 		<ul>
 			<!-- ODALIKE has been removed !-->
 			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "VisibleFlowClass", heading: "Flow Class"} %>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Intent", heading: "Intent"} %>
 			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Status", heading: "Status"} %>
 			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Sector", heading: "Sector"} %>
 			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "SectorComment", heading: "Sector Comment"} %>			
