--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -42,6 +42,7 @@
 		%>
 	!-->
 	<%= f.association :status, wrapper_html: {class: " span5"} %>
+	<%= f.association :intent, wrapper_html: {class: " span4"} %>
 	
 	<h2> Flow Class: </h2>
 </div>
