--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -29,6 +29,7 @@
     <li><%= link_to "Statuses", statuses_path %></li>
     <li><%= link_to "Sectors", sectors_path %></li>
     <li><%= link_to "Flow Classes", oda_likes_path %></li>
+    <li><%= link_to "Intents", intents_path %></li>
     <!-- li>
     <%= # link_to "Tieds", tieds_path 
     %></li !-->
