Improved scope in search facet link

--- a/app/views/projects/_project_search_scope.html.erb
+++ b/app/views/projects/_project_search_scope.html.erb
@@ -17,7 +17,8 @@
 		<% end %> 
 		
 		<% if params[:scope] %>
-			<%= hidden_field_tag "scope", params[:scope] %>
+			<% @scope = params[:scope] %>
+			<%= hidden_field_tag "scope", @scope %>
 			 <i><%= link_to "Remove scope", @current_url_without_scope, style: "color:#C96D6D" %> </i>
 		<% end %> 
 		
