--- a/app/views/projects/_facet_list.html.erb
+++ b/app/views/projects/_facet_list.html.erb
@@ -8,7 +8,7 @@
 				
 					<li class='facet-list-item'>
 						<% if params[f[:sym]].blank? %>
-							<%= link_to row.value, "#{ @current_url}#{ @joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}" %> (<%= row.count %>)
+							<%= link_to row.value, "#{ @current_url}#{ @joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}#{ (@scope&& !params[:scope]) ? "&scope=#{@scope}" : "" }" %> (<%= row.count %>)
 						<% else %>
 							<b><%= row.value %></b> (<%= link_to "remove", "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
 						<% end %>
